k8s/pricing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
  namespace: ca2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: pricing
          image: pricing:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
