k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ca2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
  namespace: ca2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
        - name: pricing
          image: pricing:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: pricing
  namespace: ca2
spec:
  selector:
    app: pricing
  ports:
    - port: 5002
      targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: ca2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: inventory:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: ca2
spec:
  selector:
    app: inventory
  ports:
    - port: 5003
      targetPort: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: ca2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: checkout:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: ca2
spec:
  selector:
    app: checkout
  ports:
    - port: 5001
      targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: ca2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gateway:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ca2
spec:
  selector:
    app: gateway
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ca2
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 5000
