k8s/keda-http-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-interceptor-proxy
  namespace: ca2
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ca2
spec:
  ingressClassName: traefik
  rules:
    - host: gateway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-interceptor-proxy
                port:
                  number: 8080
